# freytag-forge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: deploy-frontend-pages.yml  test.yml
.plans/: forge.md  freytag-architecture-refactor-plan.md  sample_if_output.txt  webui.md  world_builder.md
.serena/: project.yml
.serena/memories/: completion_checklist.md  project_overview.md  style_conventions.md  suggested_commands.md
data/: npc_voice_cards.yaml  plot_curves.yaml
data/predicates/: core.yaml
data/predicates/genres/: mystery.yaml
data/rules/: core_rules.yaml
data/rules/genres/: mystery_rules.yaml
docs/: PRD.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: main.js  styles.css
storygame/: __init__.py  cli.py  memory.py  story_canon.py  web.py  web_demo.py  web_runtime.py
storygame.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
storygame/content/: incidents.yaml
storygame/engine/: __init__.py  bootstrap.py  events.py  fact_commit.py  facts.py  freeform.py  impact.py  incidents.py  interfaces.py  mystery.py  parser.py  rules.py  scene_state.py  semantic_actions.py  simulation.py  state.py  triggers.py  turn_runtime.py  world.py  world_builder.py
storygame/llm/: __init__.py  adapters.py  bootstrap_contracts.py  coherence.py  context.py  contracts.py  narration_state.py  opening_coherence.py  output_editor.py  prompts.py  story_director.py
storygame/llm/story_agents/: __init__.py  agents.py  contracts.py  prompts.py
storygame/persistence/: savegame_sqlite.py  story_state.py
storygame/plot/: __init__.py  beat_manager.py  curves.py  dramatic_policy.py  freytag.py  tension.py
tests/: conftest.py  narrator_stubs.py  test_adapters.py  test_bootstrap_runtime.py  test_cli.py  test_cli_more.py  test_coherence_gate.py  test_curves_tension_more.py  test_event_selection.py  test_events_more.py  test_example.py  test_fact_commit.py  test_fact_helpers.py  test_fact_runtime.py  test_freeform_unit.py  test_if_output_contract.py  test_impact.py  test_llm_context.py  test_llm_contracts.py  test_mvp_gaps.py  test_mystery_coherence.py  test_mystery_more.py  test_narration_state.py  test_opening_coherence.py  test_output_editor.py  test_parser.py  test_plot_curves.py  test_plot_freytag.py  test_plot_incidents.py  test_prompt_snapshots.py  test_reproducibility.py  test_rules_more.py  test_savegame_sqlite.py  test_scene_state.py  test_state_model.py  test_story_agent_contracts.py  test_story_agent_contracts_more.py  test_story_agents_opening.py  test_story_agents_runtime.py  test_story_canon.py  (+13 more)
