[project]
name = "storygame"
description = "A deterministic, LLM-narrated text adventure with Freytag-driven plot control."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Brandon Corfman", email = "h9tbgnbbk@privaterelay.appleid.com" }]
license = { file = "LICENSE" }

dependencies = [
]

[project.scripts]
storygame = "storygame.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=storygame",
    "--cov-branch",
    "--cov-report=term",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
