[project]
name = "storygame"
description = "A deterministic, LLM-narrated text adventure with Freytag-driven plot control."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Brandon Corfman", email = "h9tbgnbbk@privaterelay.appleid.com" }]
license = { file = "LICENSE" }

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
storygame = "storygame.cli:main"

[tool.uv]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.8.4",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=storygame",
    "--cov-branch",
    "--cov-report=term",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["storygame"]
omit = [
    "storygame/__init__.py",
    "storygame/__main__.py",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]
