[project]
name = "storygame"
description = "A deterministic, LLM-narrated text adventure with Freytag-driven plot control."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Brandon Corfman", email = "h9tbgnbbk@privaterelay.appleid.com" }]
license = "MIT"

dependencies = [
    "fastapi>=0.136.0",
    "rich>=14.1.0",
    "uvicorn>=0.44.0",
    "pyyaml>=6.0.3",
]

[project.scripts]
storygame = "storygame.cli:main"

[tool.uv]

[tool.setuptools.packages.find]
where = ["."]
include = ["storygame*"]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=storygame",
    "--cov-branch",
    "--cov-fail-under=90",
    "--cov-report=term",
]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["storygame"]
omit = [
    "storygame/__init__.py",
    "storygame/__main__.py",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
extend-fixable = ["E", "F", "UP", "B", "SIM", "I"]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"
